--- a/Makefile.arm64
+++ b/Makefile.arm64
@@ -64,7 +64,7 @@ ksmbd-y := unicode.o auth.o vfs.o vfs_cache.o connection.o crypto_ctx.o \
 		transport_tcp.o transport_ipc.o
 
 ksmbd-y += smb2pdu.o smb2ops.o smb2misc.o ksmbd_spnego_negtokeninit.asn1.o \
-		ksmbd_spnego_negtokentarg.asn1.o asn1.o compat.o smb2_aapl.o
+		ksmbd_spnego_negtokentarg.asn1.o asn1.o compat.o smb2aapl.o
 
 ksmbd-$(CONFIG_SMB_INSECURE_SERVER) += smb1pdu.o smb1ops.o smb1misc.o netmisc.o
 ksmbd-$(CONFIG_SMB_SERVER_SMBDIRECT) += transport_rdma.o
